# hls-monitor

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml
crates/hls-api/: Cargo.toml
crates/hls-api/src/: app.rs  error.rs  lib.rs  metrics.rs  state.rs
crates/hls-api/src/routes/: monitors.rs
crates/hls-api/tests/: api.rs
crates/hls-cli/: Cargo.toml  build.rs
crates/hls-cli/src/: config.rs  main.rs
crates/hls-core/: Cargo.toml
crates/hls-core/src/: config.rs  lib.rs  webhook.rs
crates/hls-core/src/loader/: http.rs
crates/hls-core/src/monitor/: engine.rs  error.rs  mod.rs  state.rs
crates/hls-core/src/monitor/checks/: daterange.rs  discontinuity.rs  gap.rs  media_sequence.rs  mod.rs  mseq_gap.rs  playlist_content.rs  playlist_size.rs  playlist_type.rs  program_date_time.rs  scte35.rs  segment_continuity.rs  segment_duration_anomaly.rs  stale_manifest.rs  stream_check.rs  variant_availability.rs  variant_sync_drift.rs  version.rs
crates/hls-core/tests/: sequences.rs
docs/plans/: 2026-02-21-one-shot-validation-design.md
src/: config.rs  lib.rs  main.rs  webhook.rs
src/api/: app.rs  metrics.rs  mod.rs  state.rs
src/api/routes/: mod.rs  monitors.rs
src/cli/: app_config.rs  mod.rs
src/loader/: http.rs  mod.rs
src/monitor/: engine.rs  error.rs  event.rs  state.rs
src/monitor/checks/: daterange.rs  discontinuity.rs  encryption.rs  endlist.rs  media_sequence.rs  min_playlist_duration.rs  mod.rs  mseq_gap.rs  playlist_content.rs  playlist_size.rs  playlist_type.rs  program_date_time.rs  scte35.rs  segment_continuity.rs  target_duration.rs  target_duration_change.rs  variant_discontinuity.rs  variant_playlist_type.rs  variant_sync_drift.rs  variant_target_duration.rs  version.rs  version_compat.rs
tests/: api.rs  sequences.rs
