[package]
name = "hls-monitor"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[lib]
name = "hls_monitor"
path = "src/lib.rs"

[[bin]]
name = "hls-monitor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
m3u8-rs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
url = { version = "2", features = ["serde"] }
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
axum = { version = "0.8", features = ["json", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dashmap = "6"
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"
http-body-util = "0.1"
hyper = "1"
tokio = { version = "1", features = ["full", "test-util"] }
