[package]
name = "hls-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API server for HLS stream monitoring"

[dependencies]
hls-core = { path = "../hls-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8", features = ["json", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dashmap = "6"
url = "2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
wiremock = "0.6"
http-body-util = "0.1"
hyper = "1"
