[package]
name = "hls-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core HLS stream monitoring library"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
m3u8-rs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
url = { version = "2", features = ["serde"] }
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
